--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -72,7 +72,7 @@ rules:
         - method
 
   # import
-  import/no-unresolved: warn
+  import/no-unresolved: off
   import/order:
     - error
     - groups:
