--- a/services/storage-server/tsconfig.json
+++ b/services/storage-server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.base",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "target": "ESNext",
     "composite": true,
@@ -10,5 +10,5 @@
   },
 
   "include": ["src/**/*.ts"],
-  "exclude": [],
+  "exclude": []
 }
