chore(github): configurations

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,12 +10,16 @@ on:
       - next*
       - main
       - release/*
+      - dependabot/*
+      - feat/*
 
   push:
     branches:
       - next*
       - main
       - release/*
+      - dependabot/*
+      - feat/*
 
 env:
   NODE_VERSION: latest
