--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,6 +13,8 @@ on:
       - next*
       - main
       - release/*
+      - dependabot/*
+      - feat/*
 
   push:
     paths:
@@ -22,6 +24,8 @@ on:
       - next*
       - main
       - release/*
+      - dependabot/*
+      - feat/*
 
   schedule:
     - cron: '0 7 * * 1'
