--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,12 +10,16 @@ on:
       - next*
       - main
       - release/*
+      - dependabot/*
+      - feat/*
 
   push:
     branches:
       - next*
       - main
       - release/*
+      - dependabot/*
+      - feat/*
 
   schedule:
     - cron: '0 7 * * 4'
