--- a/server/agah-api/package.json
+++ b/server/agah-api/package.json
@@ -36,8 +36,10 @@
   },
   "devDependencies": {
     "@alwatr/logger": "^0.28.0",
+    "@alwatr/math": "^0.28.0",
     "@alwatr/nano-server": "^0.28.0",
     "@alwatr/storage-client": "^0.28.0",
+    "@alwatr/token": "^0.28.0",
     "@alwatr/type": "^0.28.0",
     "@types/node": "^18.11.18",
     "esbuild": "^0.17.5",
