--- a/ui/iconsax-cdn/package.json
+++ b/ui/iconsax-cdn/package.json
@@ -8,7 +8,7 @@
     "typescript",
     "gecut"
   ],
-  "author": "MohammadMahdi Zamanian <mm25zamanian@gmail.com> (https://mm25zamanian.ir)",
+  "author": "S. MohammadMahdi Zamanian <mm25zamanian@gmail.com> (https://mm25zamanian.ir)",
   "license": "MIT",
   "private": true,
   "engines": {
