--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
   "references": [
     {"path": "./services/storage-server"},
 
-    {"path": "./ui/iconsax-cdn"}
+    {"path": "./ui/iconsax-cdn"},
+    {"path": "./ui/ui-kit"},
   ]
 }
