--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,16 +7,16 @@ on:
 
   pull_request:
     branches:
-      - next*
-      - main
+      - develop*
+      - master
       - release/*
       - dependabot/*
       - feat/*
 
   push:
     branches:
-      - next*
-      - main
+      - develop*
+      - master
       - release/*
       - dependabot/*
       - feat/*
