feat(ui/agah-pwa): base app

--- a/ui/agah-pwa/tsconfig.json
+++ b/ui/agah-pwa/tsconfig.json
@@ -12,5 +12,6 @@
     ]
   },
   "include": ["src/**/*.ts"],
-  "exclude": []
+  "exclude": [],
+  "references": [{"path": "../ui-kit"}, {"path": "../iconsax-cdn"}]
 }
