--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,9 @@
   "references": [
     {"path": "./services/storage-server"},
 
-    {"path": "./ui/agah-pwa"},
+    {"path": "./ui/ui-kit"},
     {"path": "./ui/iconsax-cdn"},
-    {"path": "./ui/ui-kit"}
+
+    {"path": "./uniquely/ui"},
   ]
 }
