--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "version": "0.0.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "package": ["ui/*", "services/*"],
+  "package": ["services/*", "ui/*"],
   "command": {
     "version": {
       "conventionalCommits": true,
