--- a/uniquely/ui/agah-pwa/package.json
+++ b/uniquely/ui/agah-pwa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agah-pwa",
+  "name": "@gecut/agah-pwa",
   "version": "0.0.0",
   "author": "MohammadMahdi Zamanian <mm25zamanian@gmail.com> (https://mm25zamanian.ir)",
   "type": "module",
