--- a/uniquely/ui/agah-pwa/package.json
+++ b/uniquely/ui/agah-pwa/package.json
@@ -15,12 +15,14 @@
     "@alwatr/element": "0.29.0",
     "@alwatr/fetch": "^0.29.0",
     "@alwatr/font": "^0.29.0",
-    "@alwatr/i18n": "^0.28.0",
+    "@alwatr/i18n": "^0.29.0",
     "@alwatr/icon": "^0.29.0",
     "@alwatr/logger": "^0.29.0",
     "@alwatr/math": "^0.29.0",
-    "@alwatr/router": "^0.28.0",
+    "@alwatr/router": "^0.29.0",
     "@alwatr/signal": "^0.29.0",
+    "@alwatr/type": "^0.29.0",
+    "@types/html2canvas": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint": "^8.34.0",
@@ -40,5 +42,9 @@
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vite-plugin-pwa": "^0.14.4"
+  },
+  "dependencies": {
+    "@types/html2canvas": "^1.0.0",
+    "html-to-image": "^1.11.11"
   }
 }
