fix(agah-api): tsconfig

--- a/server/agah-api/tsconfig.json
+++ b/server/agah-api/tsconfig.json
@@ -5,7 +5,8 @@
     "composite": true,
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
-    "outDir": "build"
+    "outDir": "build",
+    "preserveSymlinks": true
     // "noEmit": true
   },
 
