--- a/ui/ui-kit/tsconfig.json
+++ b/ui/ui-kit/tsconfig.json
@@ -1,16 +1,8 @@
 {
   "extends": "../../tsconfig.base",
   "compilerOptions": {
-    "composite": true,
-    "tsBuildInfoFile": ".tsbuildinfo",
-    "rootDir": "src",
-    "outDir": ".",
-    "plugins": [
-      {
-        "name": "ts-lit-plugin",
-        "strict": true
-      }
-    ]
+    "rootDir": "src/",
+    "outDir": "./"
   },
   // files, include and exclude from the inheriting config are always overwritten.
   "include": ["src/**/*.ts"],
