--- a/ui/ui-kit/package.json
+++ b/ui/ui-kit/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@alwatr/element": "^0.29.0",
     "@alwatr/icon": "^0.29.0",
+    "@alwatr/util": "^0.29.0",
     "tslib": "^2.5.0"
   }
 }
