--- a/uniquely/ui/agah-pwa/package.json
+++ b/uniquely/ui/agah-pwa/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "run-s clean build:*",
+    "build": "run-s clean build:ts build:es",
+    "build:ts": "tsc --build",
     "build:es": "vite build",
     "dev": "vite dev",
     "clean": "rm -rf build"
@@ -22,16 +23,18 @@
     "@alwatr/router": "^0.29.0",
     "@alwatr/signal": "^0.29.0",
     "@alwatr/type": "^0.29.0",
+    "@alwatr/util": "^0.29.0",
     "@types/html2canvas": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
-    "eslint": "^8.34.0",
     "eslint-config-google": "^0.14.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-lit": "^1.8.2",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-wc": "^1.4.0",
+    "eslint": "^8.34.0",
+    "html-to-image": "^1.11.11",
     "lit": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "postcss-html": "^1.5.0",
@@ -40,12 +43,7 @@
     "ts-lit-plugin": "^1.2.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.4",
-    "vite": "^4.0.4",
-    "vite-plugin-pwa": "^0.14.4"
-  },
-  "dependencies": {
-    "@alwatr/util": "^0.29.0",
-    "@types/html2canvas": "^1.0.0",
-    "html-to-image": "^1.11.11"
+    "vite-plugin-pwa": "^0.14.4",
+    "vite": "^4.0.4"
   }
 }
