--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "workspaces": [
     "ui/*",
     "services/*",
-    "uniquely/ui/*",
-    "server/*"
+    "uniquely/**/*"
   ],
   "scripts": {
     "l": "yarn lint",
@@ -64,7 +63,8 @@
     "rimraf": "^4.1.2",
     "ts-lit-plugin": "^1.2.1",
     "typescript": "^4.9.5",
-    "typescript-lit-html-plugin": "^0.9.0"
+    "typescript-lit-html-plugin": "^0.9.0",
+    "wireit": "^0.9.5"
   },
   "resolutions": {
     "esbuild": "^0.16.4"
