fix: re-structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
   },
   "cSpell.language": "en,fa,fa-IR",
   "cSpell.words": [
-    "Agah",
+    "agaah",
+    "agaah",
     "alwatr",
     "calt",
     "cssprop",
