--- a/uniquely/agaah-pwa/package.json
+++ b/uniquely/agaah-pwa/package.json
@@ -6,11 +6,52 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "run-s clean build:ts build:es",
-    "build:ts": "tsc --build",
+    "build": "wireit",
+    "build:ts": "wireit",
     "build:es": "vite build",
     "dev": "vite dev",
-    "clean": "rm -rf build"
+    "clean": "wireit"
+  },
+  "wireit": {
+    "clean": {
+      "command": "rm -rf build dist",
+      "files": [
+        "dist",
+        "build"
+      ],
+      "output": []
+    },
+    "build": {
+      "clean": true,
+      "command": "vite build",
+      "dependencies": [
+        "build:ts"
+      ],
+      "files": [
+        "index.html",
+        "src/**/*.ts",
+        "public/**/*"
+      ],
+      "output": [
+        "dist"
+      ]
+    },
+    "build:ts": {
+      "command": "tsc --build",
+      "output": [
+        "build"
+      ]
+    },
+    "watch": {
+      "clean": true,
+      "command": "vite",
+      "files": [
+        "index.html",
+        "src/**/*.ts",
+        "public/**/*"
+      ],
+      "output": []
+    }
   },
   "devDependencies": {
     "@alwatr/element": "0.30.0",
@@ -38,10 +79,10 @@
     "eslint-plugin-wc": "^1.4.0",
     "html-to-image": "^1.11.11",
     "lit": "^2.6.1",
-    "npm-run-all": "^4.1.5",
     "postcss-html": "^1.5.0",
     "postcss-lit": "^1.0.1",
     "prettier": "^2.8.3",
+    "rollup-plugin-minify-html-literals": "^1.2.6",
     "ts-lit-plugin": "^1.2.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.4",
