--- a/ui/ui-kit/tsconfig.json
+++ b/ui/ui-kit/tsconfig.json
@@ -1,10 +1,19 @@
 {
   "extends": "../../tsconfig.base",
   "compilerOptions": {
-    "rootDir": "src/",
-    "outDir": "./"
+    "composite": true,
+    "tsBuildInfoFile": ".tsbuildinfo",
+    "rootDir": "src",
+    "outDir": ".",
+    "plugins": [
+      {
+        "name": "ts-lit-plugin",
+        "strict": true
+      }
+    ]
   },
   // files, include and exclude from the inheriting config are always overwritten.
   "include": ["src/**/*.ts"],
-  "exclude": []
+  "exclude": ["node_modules", "."],
+  "references": [{"path": "../../ui/iconsax-cdn"}]
 }
