--- a/ui/ui-kit/package.json
+++ b/ui/ui-kit/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@gecut/ui-kit",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Gecut UI Elements Kit",
-  "private": true,
   "keywords": [
     "element",
     "ui-kit",
@@ -18,7 +17,7 @@
   "author": "S. MohammadMahdi Zamanian <mm25zamanian@gmail.com> (https://mm25zamanian.ir)",
   "license": "MIT",
   "files": [
-    "**/**/*.{d.ts.map,d.ts,js.map,js,md}"
+    "**/**/*.{d.ts.map,d.ts,js.map,js,md,css}"
   ],
   "publishConfig": {
     "access": "public"
