--- a/uniquely/agaah-pwa/package.json
+++ b/uniquely/agaah-pwa/package.json
@@ -13,27 +13,29 @@
     "clean": "rm -rf build"
   },
   "devDependencies": {
-    "@alwatr/element": "0.29.0",
-    "@alwatr/fetch": "^0.29.0",
-    "@alwatr/font": "^0.29.0",
-    "@alwatr/i18n": "^0.29.0",
-    "@alwatr/icon": "^0.29.0",
-    "@alwatr/logger": "^0.29.0",
-    "@alwatr/math": "^0.29.0",
-    "@alwatr/router": "^0.29.0",
-    "@alwatr/signal": "^0.29.0",
-    "@alwatr/type": "^0.29.0",
-    "@alwatr/util": "^0.29.0",
+    "@alwatr/element": "0.30.0",
+    "@alwatr/fetch": "^0.30.0",
+    "@alwatr/font": "^0.30.0",
+    "@alwatr/i18n": "^0.30.0",
+    "@alwatr/icon": "^0.30.0",
+    "@alwatr/logger": "^0.30.0",
+    "@alwatr/math": "^0.30.0",
+    "@alwatr/router": "^0.30.0",
+    "@alwatr/signal": "^0.30.0",
+    "@alwatr/type": "^0.30.0",
+    "@alwatr/util": "^0.30.0",
+    "@gecut/iconsax-cdn": "^0.1.0",
+    "@gecut/ui-kit": "^0.1.0",
     "@types/html2canvas": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.36.0",
     "eslint-config-google": "^0.14.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-lit": "^1.8.2",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-wc": "^1.4.0",
-    "eslint": "^8.34.0",
     "html-to-image": "^1.11.11",
     "lit": "^2.6.1",
     "npm-run-all": "^4.1.5",
@@ -43,7 +45,7 @@
     "ts-lit-plugin": "^1.2.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.4",
-    "vite-plugin-pwa": "^0.14.4",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vite-plugin-pwa": "^0.14.4"
   }
 }
