--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -43,6 +43,7 @@ rules:
   wc/guard-super-call: off
   no-misleading-character-class: off
   no-throw-literal: off
+  new-cap: off
   require-jsdoc: off
   valid-jsdoc: off
   class-methods-use-this:
